--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-pdf": "^5.7.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.1",
     "react-tsparticles": "^1.42.2",
